tests/paczka1/small_fuzzy/67128593.err
Error in line 3: Wl8byD1Q A127 94,72
Error in line 4: Wl8byD1Q A127 27,3
